Closed Bug 773961 Opened 14 years ago Closed 14 years ago

'Browse' sometimes does not work

Categories

(Core Graveyard :: Widget: OS/2, defect)

x86
OS/2
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla17

People

(Reporter: komh, Assigned: komh)

Details

(Whiteboard: NPOTB, OS/2 only file.)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0) Gecko/20100101 Firefox/13.0.1 Build ID: 20120614114901
OS: Windows 7 → OS/2
Hardware: x86_64 → x86
Sometimes, initialDir.get() return a path with '\' at last. In this case, WinFileDlg() fails because of double '\' in a path.
Attachment #642227 - Flags: review?(daveryeo)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: mozilla → komh
Comment on attachment 642227 [details] [diff] [review] Fix a browse problem I wonder if this will also fix bug#573220. Did your IME test build also have this fix? If so we should request that someone suffering from #573220 test then perhaps mark it as a duplicate of this bug.
Attachment #642227 - Flags: review?(daveryeo) → review+
I've updated IME test build because I'm not sure it contains this patch. ^^ Try this, http://www.ecomstation.co.kr/komh/testcase/firefox-10.0.6esrpre.en-US.os2.zip
Tried it ,but no solution for bug#573220 from which i am suffering for a long time. But i do not have a browse problem
Attachment #642227 - Flags: checkin?
Keywords: checkin-needed
Whiteboard: NPOTB, OS/2 only file.
Comment on attachment 642227 [details] [diff] [review] Fix a browse problem You can just use checkin-needed when you need something checked in.
Attachment #642227 - Flags: checkin?
https://hg.mozilla.org/integration/mozilla-inbound/rev/defbe00ca091 I inadvertently checked this in with my name on it because I didn't notice that the attached patch was missing the right metadata for it. As a reminder, please follow the directions below for future patches so that these types of problems don't occur. Thanks and my apologies. https://developer.mozilla.org/en/Creating_a_patch_that_can_be_checked_in
Flags: in-testsuite-
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: NPOTB, OS/2 only file. → NPOTB, OS/2 only file.
Target Milestone: --- → mozilla17
(In reply to Ryan VanderMeulen from comment #6) > Comment on attachment 642227 [details] [diff] [review] > Fix a browse problem > > You can just use checkin-needed when you need something checked in. I learned a new thing, again. ^^ (In reply to Ryan VanderMeulen from comment #7) > https://hg.mozilla.org/integration/mozilla-inbound/rev/defbe00ca091 > > I inadvertently checked this in with my name on it because I didn't notice > that the attached patch was missing the right metadata for it. As a > reminder, please follow the directions below for future patches so that > these types of problems don't occur. Thanks and my apologies. > https://developer.mozilla.org/en/Creating_a_patch_that_can_be_checked_in I attached the patch from .hg/patches directly. In this case, metadatas such as username seem not to be generated automatically. I'll confirm this before submitting a patch, later. Thanks.
(In reply to KO Myung-Hun from comment #9) > I attached the patch from .hg/patches directly. > > In this case, metadatas such as username seem not to be generated > automatically. > It should if you set |qnew = -U| under [defaults]
(In reply to Ryan VanderMeulen from comment #10) > (In reply to KO Myung-Hun from comment #9) > > I attached the patch from .hg/patches directly. > > > > In this case, metadatas such as username seem not to be generated > > automatically. > > > > It should if you set |qnew = -U| under [defaults] Strange, I already did it. Hmm... Maybe it had no effects because a patch had been made before it was set. Thanks.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: