Bug 773961 - Append '\' only if a path does not end with '\'. r=daveryeo Sometimes, initialDir.get() return a path with '\' at last. In this case, WinFileDlg() fails because of double '\' in a path.